--- a/SalesMVC/Views/Home/Contact.cshtml
+++ b/SalesMVC/Views/Home/Contact.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Contact";
+    ViewData["Title"] = "Contact - Test";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h1>@ViewData["Message"]</h1>
 
 <address>
     One Microsoft Way<br />
